--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <li class="container-benefits-item">
                     <div class="icon-list">
                             <svg class="logo-icon" width="64" height="64" aria-label="icon antenna">
-                                <use href="/images/symbol-defs.svg#icon-antenna"></use>
+                                <use href="./images/symbol-defs.svg#icon-antenna"></use>
                             </svg>
                     </div>
                     <h3 class="benefits-list">Strategy</h3>
@@ -68,7 +68,7 @@
                 <li class="container-benefits-item">
                     <div class="icon-list">
                             <svg class="logo-icon" width="64" height="64" aria-label="icon clock">
-                                <use href="/images/symbol-defs.svg#icon-clock"></use>
+                                <use href="./images/symbol-defs.svg#icon-clock"></use>
                             </svg>
                     </div>
                     <h3 class="benefits-list">Punctuality</h3>
@@ -77,7 +77,7 @@
                 <li class="container-benefits-item">
                     <div class="icon-list">
                             <svg class="logo-icon" width="64" height="64" aria-label="icon diagram">
-                                <use href="/images/symbol-defs.svg#icon-diagram"></use>
+                                <use href="./images/symbol-defs.svg#icon-diagram"></use>
                             </svg>
                     </div>
                     <h3 class="benefits-list">Diligence</h3>
@@ -86,7 +86,7 @@
                 <li class="container-benefits-item">
                     <div class="icon-list">
                             <svg class="logo-icon" width="64" height="64" aria-label="icon astronaut">
-                                <use href="/images/symbol-defs.svg#icon-astronaut"></use>
+                                <use href="./images/symbol-defs.svg#icon-astronaut"></use>
                             </svg>
                     </div>
                     <h3 class="benefits-list">Technologies</h3>
@@ -113,28 +113,28 @@
     <li class="social-link-item">
         <a class="social-list nav-link" href="">
         <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
-            <use href="/images/symbol-defs-1.svg#icon-instagram"></use>
+            <use href="./images/symbol-defs-1.svg#icon-instagram"></use>
         </svg>
     </a>
     </li>
     <li class="social-link-item">
         <a class="social-list nav-link" href="">
         <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
-            <use href="/images/symbol-defs-1.svg#icon-twitter"></use>
+            <use href="./images/symbol-defs-1.svg#icon-twitter"></use>
         </svg>
     </a>
     </li>
     <li class="social-link-item">
         <a class="social-list nav-link" href="">
         <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
-            <use href="/images/symbol-defs-1.svg#icon-facebook"></use>
+            <use href="./images/symbol-defs-1.svg#icon-facebook"></use>
         </svg>
     </a>
     </li>
     <li class="social-link-item">
         <a class="social-list nav-link" href="">
         <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
-            <use href="/images/symbol-defs-1.svg#icon-linkedin"></use>
+            <use href="./images/symbol-defs-1.svg#icon-linkedin"></use>
         </svg>
     </a>
     </li>
@@ -153,28 +153,28 @@
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
-                                <use href="/images/symbol-defs-1.svg#icon-instagram"></use>
+                                <use href="./images/symbol-defs-1.svg#icon-instagram"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
-                                <use href="/images/symbol-defs-1.svg#icon-twitter"></use>
+                                <use href="./images/symbol-defs-1.svg#icon-twitter"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
-                                <use href="/images/symbol-defs-1.svg#icon-facebook"></use>
+                                <use href="./images/symbol-defs-1.svg#icon-facebook"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
-                                <use href="/images/symbol-defs-1.svg#icon-linkedin"></use>
+                                <use href="./images/symbol-defs-1.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                         </li>
@@ -193,28 +193,28 @@
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
-                                <use href="/images/symbol-defs-1.svg#icon-instagram"></use>
+                                <use href="./images/symbol-defs-1.svg#icon-instagram"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
-                                <use href="/images/symbol-defs-1.svg#icon-twitter"></use>
+                                <use href="./images/symbol-defs-1.svg#icon-twitter"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
-                                <use href="/images/symbol-defs-1.svg#icon-facebook"></use>
+                                <use href="./images/symbol-defs-1.svg#icon-facebook"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
-                                <use href="/images/symbol-defs-1.svg#icon-linkedin"></use>
+                                <use href="./images/symbol-defs-1.svg#icon-linkedin"></use>
                             </svg>
                         </a>
                         </li>
@@ -233,30 +233,30 @@
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo instagram">
-                                <use href="/images/symbol-defs-1.svg#icon-instagram"></use>
+                                <use href="./images/symbol-defs-1.svg#icon-instagram"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo twitter">
-                                <use href="/images/symbol-defs-1.svg#icon-twitter"></use>
+                                <use href="./images/symbol-defs-1.svg#icon-twitter"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo facebook">
-                                <use href="/images/symbol-defs-1.svg#icon-facebook"></use>
+                                <use href="./images/symbol-defs-1.svg#icon-facebook"></use>
                             </svg>
                         </a>
                         </li>
                         <li class="social-link-item">
                             <a class="social-list nav-link" href="">
                             <svg class="logo-social" width="16" height="16" aria-label="logo linkedin">
-                                <use href="/images/symbol-defs-1.svg#icon-linkedin"></use>
-                            </a>
+                                <use href="./images/symbol-defs-1.svg#icon-linkedin"></use>
                             </svg>
+                        </a>
                         </li>
                     </ul>
                 </li>
@@ -383,28 +383,28 @@
                 <li class="footer-icon">
                     <a href="" class="footer-desing-list">
                     <svg class="logo-footer-desing" width="24" height="24" aria-label="logo instagram">
-                        <use href="/images/symbol-defs-1.svg#icon-instagram"></use>
+                        <use href="./images/symbol-defs-1.svg#icon-instagram"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="footer-icon">
                     <a href="" class="footer-desing-list">
                     <svg class="logo-footer-desing" width="24" height="24" aria-label="logo twitter">
-                        <use href="/images/symbol-defs-1.svg#icon-twitter"></use>
+                        <use href="./images/symbol-defs-1.svg#icon-twitter"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="footer-icon">
                     <a href="" class="footer-desing-list">
                     <svg class="logo-footer-desing" width="24" height="24" aria-label="logo facebook">
-                        <use href="/images/symbol-defs-1.svg#icon-facebook"></use>
+                        <use href="./images/symbol-defs-1.svg#icon-facebook"></use>
                     </svg>
                 </a>
                 </li>
                 <li class="footer-icon">
                     <a href="" class="footer-desing-list">
                     <svg class="logo-footer-desing" width="24" height="24" aria-label="logo linkedin">
-                        <use href="/images/symbol-defs-1.svg#icon-linkedin"></use>
+                        <use href="./images/symbol-defs-1.svg#icon-linkedin"></use>
                     </svg>
                 </a>
                 </li>
